--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* 
 * minstyle.io - A simple CSS Framework ! 
 * Repo : https://github.com/Airmime/minstyle.io
@@ -50,6 +51,316 @@ a img {
 
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block; }
+
+/*-----------------------------------*
+  $TOAST-GRID
+
+  An insane grid.
+  You'd be mad to use it.
+
+  Usage
+  =====
+
+  Assuming default values:
+
+  <div class="grid">
+    <div class="grid__col grid__col--1-of-2">
+      A half-width column.
+    </div>
+    <div class="grid__col grid__col--1-of-4 grid__col--pull-1-of-4">
+      A quarter, pulled left by its own width. You get this, right?
+    </div>
+  </div>
+
+
+  Customisation
+  =============
+
+  $toast-grid-namespace and $toast-grid-column-namespace
+  adjusts the class names for the grid. With
+  default values, grid wrappers have a class
+  of '.grid' and columns '.grid__col'.
+
+  $toast-col-groups(n) adjusts column divisions.
+  For example, $toast-col-groups(12) will produce
+  a 12-column grid. $col-groups(3,6,8)
+  will produce a 3-, 6-, and 8-column grid.
+
+  $toast-gutter-width is—you guessed it—the gutter
+  width. Accepts any unit.
+
+  That's it. Have fun.
+
+\*-----------------------------------*/
+.container {
+  list-style: none;
+  margin-left: -10px; }
+
+.ms_col--2-of-2, .ms_col--3-of-3, .ms_col--4-of-4, .ms_col--5-of-5, .ms_col--6-of-6, .ms_col--8-of-8, .ms_col--12-of-12 {
+  width: 100%; }
+
+.ms_col--1-of-2, .ms_col--2-of-4, .ms_col--3-of-6, .ms_col--4-of-8, .ms_col--6-of-12 {
+  width: 50%; }
+
+.ms_col--1-of-3, .ms_col--2-of-6, .ms_col--4-of-12 {
+  width: 33.33333%; }
+
+.ms_col--2-of-3, .ms_col--4-of-6, .ms_col--8-of-12 {
+  width: 66.66667%; }
+
+.ms_col--1-of-4, .ms_col--2-of-8, .ms_col--3-of-12 {
+  width: 25%; }
+
+.ms_col--3-of-4, .ms_col--6-of-8, .ms_col--9-of-12 {
+  width: 75%; }
+
+.ms_col--push-2-of-2, .ms_col--push-3-of-3, .ms_col--push-4-of-4, .ms_col--push-5-of-5, .ms_col--push-6-of-6, .ms_col--push-8-of-8, .ms_col--push-12-of-12 {
+  margin-left: 100%; }
+
+.ms_col--push-1-of-2, .ms_col--push-2-of-4, .ms_col--push-3-of-6, .ms_col--push-4-of-8, .ms_col--push-6-of-12 {
+  margin-left: 50%; }
+
+.ms_col--push-1-of-3, .ms_col--push-2-of-6, .ms_col--push-4-of-12 {
+  margin-left: 33.33333%; }
+
+.ms_col--push-2-of-3, .ms_col--push-4-of-6, .ms_col--push-8-of-12 {
+  margin-left: 66.66667%; }
+
+.ms_col--push-1-of-4, .ms_col--push-2-of-8, .ms_col--push-3-of-12 {
+  margin-left: 25%; }
+
+.ms_col--push-3-of-4, .ms_col--push-6-of-8, .ms_col--push-9-of-12 {
+  margin-left: 75%; }
+
+.ms_col--pull-2-of-2, .ms_col--pull-3-of-3, .ms_col--pull-4-of-4, .ms_col--pull-5-of-5, .ms_col--pull-6-of-6, .ms_col--pull-8-of-8, .ms_col--pull-12-of-12 {
+  margin-left: -100%; }
+
+.ms_col--pull-1-of-2, .ms_col--pull-2-of-4, .ms_col--pull-3-of-6, .ms_col--pull-4-of-8, .ms_col--pull-6-of-12 {
+  margin-left: -50%; }
+
+.ms_col--pull-1-of-3, .ms_col--pull-2-of-6, .ms_col--pull-4-of-12 {
+  margin-left: -33.33333%; }
+
+.ms_col--pull-2-of-3, .ms_col--pull-4-of-6, .ms_col--pull-8-of-12 {
+  margin-left: -66.66667%; }
+
+.ms_col--pull-1-of-4, .ms_col--pull-2-of-8, .ms_col--pull-3-of-12 {
+  margin-left: -25%; }
+
+.ms_col--pull-3-of-4, .ms_col--pull-6-of-8, .ms_col--pull-9-of-12 {
+  margin-left: -75%; }
+
+.ms_col--1-of-5 {
+  width: 20%; }
+
+.ms_col--push-1-of-5 {
+  margin-left: 20%; }
+
+.ms_col--pull-1-of-5 {
+  margin-left: -20%; }
+
+.ms_col--2-of-5 {
+  width: 40%; }
+
+.ms_col--push-2-of-5 {
+  margin-left: 40%; }
+
+.ms_col--pull-2-of-5 {
+  margin-left: -40%; }
+
+.ms_col--3-of-5 {
+  width: 60%; }
+
+.ms_col--push-3-of-5 {
+  margin-left: 60%; }
+
+.ms_col--pull-3-of-5 {
+  margin-left: -60%; }
+
+.ms_col--4-of-5 {
+  width: 80%; }
+
+.ms_col--push-4-of-5 {
+  margin-left: 80%; }
+
+.ms_col--pull-4-of-5 {
+  margin-left: -80%; }
+
+.ms_col--1-of-6 {
+  width: 16.66667%; }
+
+.ms_col--push-1-of-6 {
+  margin-left: 16.66667%; }
+
+.ms_col--pull-1-of-6 {
+  margin-left: -16.66667%; }
+
+.ms_col--5-of-6 {
+  width: 83.33333%; }
+
+.ms_col--push-5-of-6 {
+  margin-left: 83.33333%; }
+
+.ms_col--pull-5-of-6 {
+  margin-left: -83.33333%; }
+
+.ms_col--1-of-8 {
+  width: 12.5%; }
+
+.ms_col--push-1-of-8 {
+  margin-left: 12.5%; }
+
+.ms_col--pull-1-of-8 {
+  margin-left: -12.5%; }
+
+.ms_col--3-of-8 {
+  width: 37.5%; }
+
+.ms_col--push-3-of-8 {
+  margin-left: 37.5%; }
+
+.ms_col--pull-3-of-8 {
+  margin-left: -37.5%; }
+
+.ms_col--5-of-8 {
+  width: 62.5%; }
+
+.ms_col--push-5-of-8 {
+  margin-left: 62.5%; }
+
+.ms_col--pull-5-of-8 {
+  margin-left: -62.5%; }
+
+.ms_col--7-of-8 {
+  width: 87.5%; }
+
+.ms_col--push-7-of-8 {
+  margin-left: 87.5%; }
+
+.ms_col--pull-7-of-8 {
+  margin-left: -87.5%; }
+
+.ms_col--1-of-12 {
+  width: 8.33333%; }
+
+.ms_col--push-1-of-12 {
+  margin-left: 8.33333%; }
+
+.ms_col--pull-1-of-12 {
+  margin-left: -8.33333%; }
+
+.ms_col--2-of-12 {
+  width: 16.66667%; }
+
+.ms_col--push-2-of-12 {
+  margin-left: 16.66667%; }
+
+.ms_col--pull-2-of-12 {
+  margin-left: -16.66667%; }
+
+.ms_col--5-of-12 {
+  width: 41.66667%; }
+
+.ms_col--push-5-of-12 {
+  margin-left: 41.66667%; }
+
+.ms_col--pull-5-of-12 {
+  margin-left: -41.66667%; }
+
+.ms_col--7-of-12 {
+  width: 58.33333%; }
+
+.ms_col--push-7-of-12 {
+  margin-left: 58.33333%; }
+
+.ms_col--pull-7-of-12 {
+  margin-left: -58.33333%; }
+
+.ms_col--10-of-12 {
+  width: 83.33333%; }
+
+.ms_col--push-10-of-12 {
+  margin-left: 83.33333%; }
+
+.ms_col--pull-10-of-12 {
+  margin-left: -83.33333%; }
+
+.ms_col--11-of-12 {
+  width: 91.66667%; }
+
+.ms_col--push-11-of-12 {
+  margin-left: 91.66667%; }
+
+.ms_col--pull-11-of-12 {
+  margin-left: -91.66667%; }
+
+.ms_col {
+  box-sizing: border-box;
+  display: inline-block;
+  margin-right: -.25em;
+  min-height: 1px;
+  padding-left: 10px;
+  vertical-align: top; }
+  @media (max-width: 700px) {
+    .ms_col {
+      display: block;
+      margin-left: 0;
+      margin-right: 0;
+      width: auto; } }
+  @media (max-width: 700px) and (min-width: 480px) {
+    .ms_col[class*="ms_col--m-"] {
+      display: inline-block;
+      margin-right: -.24em; }
+    .ms_col.ms_col--m-1-of-2, .ms_col.ms_col--m-2-of-4 {
+      width: 50%; }
+    .ms_col.ms_col--m-1-of-3 {
+      width: 33.33333%; }
+    .ms_col.ms_col--m-2-of-3 {
+      width: 66.66667%; }
+    .ms_col.ms_col--m-1-of-4 {
+      width: 25%; }
+    .ms_col.ms_col--m-3-of-4 {
+      width: 75%; } }
+  @media (max-width: 480px) {
+    .ms_col[class*="ms_col--s-"] {
+      display: inline-block;
+      margin-right: -.24em; }
+    .ms_col.ms_col--s-1-of-2, .ms_col.ms_col--s-2-of-4 {
+      width: 50%; }
+    .ms_col.ms_col--s-1-of-3 {
+      width: 33.33333%; }
+    .ms_col.ms_col--s-2-of-3 {
+      width: 66.66667%; }
+    .ms_col.ms_col--s-1-of-4 {
+      width: 25%; }
+    .ms_col.ms_col--s-3-of-4 {
+      width: 75%; } }
+
+.ms_col--centered {
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+.ms_col--d-first {
+  float: left; }
+
+.ms_col--d-last {
+  float: right; }
+
+.container--no-gutter {
+  margin-left: 0;
+  width: 100%; }
+  .container--no-gutter .ms_col {
+    padding-left: 0; }
+  .container--no-gutter .ms_col--span-all {
+    margin-left: 0;
+    width: 100%; }
+
+.ms_col--ab {
+  vertical-align: bottom; }
+
+.ms_col--am {
+  vertical-align: middle; }
 
 /* BASE */
 *,
