--- a/css/scss/_typography.scss
+++ b/css/scss/_typography.scss
@@ -170,3 +170,42 @@ dl {
     margin: 1rem;
   }
 }
+
+/* BLOCKQUOTE */
+blockquote, .ms-blockquote{
+	border-left: 2px solid $color-gray-1;
+	color: $color-gray-3;
+	margin-bottom: 1rem;
+	padding: 1rem;
+
+	p{
+		margin: 0 0 0.5rem 0;
+	}
+
+	&.ms-center{
+		text-align: center;
+	}
+
+	&.ms-info{
+		border-color: $color-blue-1;
+	}
+
+	&.ms-success{
+		border-color: $color-green-1;
+	}
+
+	&.ms-error{
+		border-color: $color-red-1;
+	}
+
+	&.ms-warning{
+		border-color: $color-yellow-1;
+	}
+}
+
+/* HR */
+hr{
+	width: 100%;
+	height: 1px;
+	background-color: rgba(0,0,0,0.1);
+}
