--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -14,10 +14,12 @@
 @import "_color";
 @import "_global";
 @import "_button";
-@import "_alert";
+@import "_alerts";
 @import "_progressbar";
 @import "_form";
 @import "_typography";
 @import "_label";
 @import "_table";
+@import "_avatars";
+@import "_user";
 
