--- a/css/scss/_typography.scss
+++ b/css/scss/_typography.scss
@@ -60,7 +60,9 @@ h6,.h6 {
 .ms-text-left{
 	text-align: left;
 }
-
+.ms-text-justify{
+	text-align: justify;
+}
 /* MARK */
  mark,.ms-mark{
 	background-color: #ffe9b3;
