--- a/css/scss/_avatars.scss
+++ b/css/scss/_avatars.scss
@@ -41,11 +41,25 @@
 	&.ms-medium{
 		$sizeMedium: 75px;
 		@include sizeAvatar(2rem,$sizeMedium,$sizeMedium,$sizeMedium);
+
+		.ms-status{
+			width: 15px;
+			height: 15px;
+			right: 4px;
+			bottom: 4px;
+		}
 	}
 
 	&.ms-large{
 		$sizeLarge: 95px;
 		@include sizeAvatar(3rem,$sizeLarge,$sizeLarge,$sizeLarge);
+
+		.ms-status{
+			width: 20px;
+			height: 20px;
+			right: 2px;
+			bottom: 2px;
+		}
 	}
 
 	.ms-status{
