--- a/css/scss/_cards.scss
+++ b/css/scss/_cards.scss
@@ -4,6 +4,12 @@
 	margin: 1rem 0;
 	padding: 0;
 
+	&.ms-border{
+		border: 1px solid $color-gray-1;
+		padding-top: 1rem;
+		@include border-radius(3px);
+	}
+
 	.ms-card-pic{
 		margin-bottom: 1rem;
 		position: relative;
@@ -25,7 +31,10 @@
 		margin: 0;
 		padding: 0 1rem 1rem 1rem;
 
-		h1,h2,h3,h4,h5,h6{
+		h1,h2,h3,h4,h5,h6,a{
+			font-size: 1.75rem;
+			text-decoration: none;
+			color: #2c3e50;
 			margin: 0;
 			padding: 0;
 		}
@@ -48,5 +57,25 @@
 	.ms-card-btn{
 		margin: 0;
 		padding: 0 1rem 1rem 1rem;
+	}
+
+	.ms-section{
+		.ms-section-bloc{
+			border-bottom: 1px solid $color-gray-1;
+			padding: 1rem;
+
+			p{
+				margin: 0;
+			}
+
+			&:first-child{
+				border-top: 1px solid $color-gray-1;
+			}
+
+			&:last-child{
+				border-bottom: 1px solid $color-gray-1;
+				margin-bottom: 1rem;
+			}
+		}
 	}
 }
