--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -1928,7 +1928,8 @@ table, .ms-table {
       display: inline-block;
       list-style: none;
       margin: 0;
-      padding: 0; }
+      padding: 0;
+      /* LOGO */ }
       .ms-tab ul li a {
         display: block;
         font-size: 1rem;
@@ -1940,6 +1941,9 @@ table, .ms-table {
           border-bottom: 2px solid #e8e8e8; }
         .ms-tab ul li a.ms-active {
           border-bottom: 2px solid #b1b1b1; }
+      .ms-tab ul li.ms-logo img {
+        max-height: 30px;
+        vertical-align: bottom; }
   .ms-tab.ms-fullwidth ul {
     display: flex;
     flex-wrap: wrap; }
