--- a/css/scss/_alerts.scss
+++ b/css/scss/_alerts.scss
@@ -9,6 +9,14 @@
             background-color: #ffffff;
         }
     }
+
+    hr{
+        background-color: tint($primaryColor, 25);
+    }
+
+    h1,h2,h3,h4,h5,h6{
+        color: $textColor;
+    }
 }
 
 @mixin alert-outline($textColor,$primaryColor,$percentage){
@@ -21,6 +29,14 @@
             background-color: $textColor;
         }
     }
+
+    hr{
+        background-color: tint($primaryColor, 80);
+    }
+
+    h1,h2,h3,h4,h5,h6{
+        color: $textColor;
+    }
 }
 
 /* BASE */
@@ -32,7 +48,7 @@
     font-size: 1rem;
     position: relative;
     margin-bottom: 1rem;
-    padding: 0.9rem 1.2rem;
+    padding: 1rem;
     @include border-radius(3px);
     
     /* COLORS */
@@ -90,6 +106,21 @@
         }
         &:after {
             transform: rotate(-45deg);
+        }
+    }
+
+    &.ms-content{        
+        h1,h2,h3,h4,h5,h6{
+            margin: 0 0 0.3rem 0;
+        }
+
+        p{
+            line-height: 1.5rem;
+            margin: 0 0 0.3rem 0;
+        }
+
+        hr{
+            margin: 0.8rem 0;
         }
     }
 
