--- a/css/scss/_global.scss
+++ b/css/scss/_global.scss
@@ -10,7 +10,7 @@ html {
 
 body{
 	color: #333333;
-	font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"
 }
 
 b,strong{
@@ -23,6 +23,7 @@ a{
 
 p{
 	display: block;
+	font-size: 1rem;
 	line-height: 1.3rem;
 	margin-block-start: 1em;
 	margin-block-end: 1em;
