--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -2028,7 +2028,11 @@ table, .ms-table {
     display: block; }
   .ms-dropdown .ms-dropdown-content {
     display: none;
-    margin-bottom: 0.3rem; }
+    height: 0.3rem;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 100%; }
     .ms-dropdown .ms-dropdown-content .ms-dropdown-content-list {
       min-width: 7rem;
       position: absolute;
