--- a/css/scss/_dropdown.scss
+++ b/css/scss/_dropdown.scss
@@ -11,7 +11,11 @@
 
 	.ms-dropdown-content{
 		display: none;
-		margin-bottom: 0.3rem;
+		height: 0.3rem;
+		width: 100%;
+		position: absolute;
+		left: 0;
+		top: 100%;
 
 		.ms-dropdown-content-list{
 			min-width: 7rem;
