--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -10,6 +10,8 @@
 @import "compass/css3";
 
 @import "_normelize";
+@import "_variables";
+
 @import "_grid";
 @import "_color";
 @import "_global";
