--- a/css/scss/_alerts.scss
+++ b/css/scss/_alerts.scss
@@ -49,7 +49,7 @@
     position: relative;
     margin-bottom: 1rem;
     padding: 1rem;
-    @include border-radius(3px);
+    @include border-radius($default-border-radius);
     
     /* COLORS */
     &.ms-info{
@@ -86,15 +86,19 @@
 
     /* CLOSE ICON */
     .ms-close{
+        width: 20px;
+        height: 20px;
         display: block;
         position: absolute;
         top: 5px;
-        right: 25px;
+        right: 5px;
         cursor: pointer;
+        text-align: center;
         
         &:before, &:after {
             position: absolute;
-            left: 15px;
+            left: 9px;
+            top: 5px;
             content: ' ';
             height: 10px;
             width: 2px;
@@ -106,6 +110,16 @@
         }
         &:after {
             transform: rotate(-45deg);
+        }
+
+        &:hover{
+            background-color: rgba(0,0,0,0.1);
+            @include border-radius(4px);
+        }
+
+        &:active{
+            background-color: rgba(0,0,0,0.2);
+            @include border-radius(4px);
         }
     }
 
