--- a/css/scss/_dropdown.scss
+++ b/css/scss/_dropdown.scss
@@ -26,7 +26,7 @@
 			border: 1px solid $color-gray-1;
 			margin: 0;
 			padding: 0.5rem;
-			@include border-radius(3px);
+			@include border-radius($default-border-radius);
 
 			li{
 				list-style: none;
@@ -42,7 +42,7 @@
 
 					&:hover{
 						background-color: $color-gray-0;
-						@include border-radius(3px);
+						@include border-radius($default-border-radius);
 					}
 				}
 			}
