--- a/css/scss/_label.scss
+++ b/css/scss/_label.scss
@@ -31,7 +31,7 @@
 	font-size: 1rem;
 	margin-right: 0.1rem;
 	padding: 0.2rem 0.4rem;
-	@include border-radius(3px);
+	@include border-radius($default-border-radius);
 	
 	/* COLORS */
 	@include color-label;
