--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -2083,3 +2083,33 @@ table, .ms-table {
             -ms-border-radius: 3px;
             -o-border-radius: 3px;
             border-radius: 3px; }
+
+.ms-breadcrumb ul {
+  list-style: none;
+  margin: 0; }
+  .ms-breadcrumb ul li {
+    list-style: none;
+    display: inline-block;
+    margin: 0 0 0 0.5rem; }
+    .ms-breadcrumb ul li:after {
+      content: "/";
+      padding-left: 0.5rem; }
+    .ms-breadcrumb ul li:last-child:after {
+      content: ""; }
+    .ms-breadcrumb ul li:first-child {
+      margin-left: 0; }
+
+.ms-breadcrumb.ms-background {
+  width: 100%;
+  background-color: #f6f6f6;
+  padding: 1rem;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px; }
+
+.ms-breadcrumb.ms-border {
+  width: 100%;
+  border-bottom: 1px solid #e1e1e1;
+  padding: 1rem; }
