--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -711,7 +711,7 @@ input[type='submit'] {
   font-size: 1rem;
   font-weight: 500;
   cursor: pointer;
-  margin: 0;
+  margin: 0.5rem 0;
   padding: 0.4rem 1rem;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
